--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,22 @@
-# This is a basic workflow to help you get started with Actions
+name: Dev build CI
 
-name: dev build CI
 
-# Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events
   push:
+    paths-ignore:
+      - 'README**'
     branches:
       - '*'
   pull_request:
     branches:
       - '*'
+    paths-ignore:
+      - 'README**'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     strategy:
       matrix:
         #python-versions: ['3.7', '3.8', '3.9', '3.10']
@@ -27,12 +25,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     # map step outputs to job outputs so they can be share among jobs
     outputs:
-      package_version: ${{ steps.variables_step.outputs.package_version }}
-      package_name: ${{ steps.variables_step.outputs.package_name }}
-      repo_name: ${{ steps.variables_step.outputs.repo_name }}
-      repo_owner: ${{ steps.variables_step.outputs.repo_owner }}
+      package_version: ${{ env.PACKAGE_VERSION }}
+      package_name: ${{ env.PACKAGE_NAME }}
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
@@ -46,17 +41,12 @@ jobs:
           pip install poetry
         # pip install tox tox-gh-actions poetry
 
-
-
-      # declare package_version, repo_owner, repo_name, package_name so you may use it in web hooks.
       - name: Declare variables for convenient use
         id: variables_step
         run: |
           poetry version $(poetry version --short)-dev.$GITHUB_RUN_NUMBER
-          echo "::set-output name=repo_owner::${GITHUB_REPOSITORY%/*}"
-          echo "::set-output name=repo_name::${GITHUB_REPOSITORY#*/}"
-          echo "::set-output name=package_name::`poetry version | awk '{print $1}'`"
-          echo "::set-output name=package_version::`poetry version --short`"
+          echo "PACKAGE_NAME=$(poetry version | awk '{print $1}') >> $GITHUB_ENV "
+          echo "PACKAGE_VERSION=$(poetry version --short) >> $GITHUB_ENV"
         shell: bash
 
       - name: build
@@ -72,7 +62,7 @@ jobs:
         uses: actions/upload-artifact@v3
         if: matrix.python-versions == '3.10'
         with:
-          name: ${{ steps.variables_step.outputs.package_name }}-${{ steps.variables_step.outputs.package_version }}.zip
+          name: ${{ env.PACKAGE_NAME }}-${{ env.PACKAGE_VERSION }}.zip
           path: dist/*.tar.gz
           if-no-files-found: error
 
