--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,14 +4,17 @@
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
-
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter",
         "editor.formatOnSave": true,
         "editor.codeActionsOnSave": {
             "source.organizeImports": true
         },
-      },
-      "isort.args":["--profile", "black"],
-
+    },
+    "isort.args": [
+        "--profile",
+        "black"
+    ],
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true
 }
