--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,9 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-typer = {extras = ["all"], version = "^0.7.0"}
+typer = "^0.9.0"
 isort = "^5.11.4"
+setuptools = "^69.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
