--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.9"
 typer = "^0.9.0"
 isort = "^5.11.4"
 setuptools = "^69.1.0"
+importlib-resources = "^6.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
