--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mag"
-version = "1.8.0"
+version = "1.9.0"
 description = "Data tools for MAG GSE data processing"
 authors = ["Imperial College"]
 readme = "README.md"
@@ -14,6 +14,8 @@ typer = "^0.9.0"
 isort = "^5.11.4"
 setuptools = "^69.1.0"
 importlib-resources = "^6.4.0"
+ccsdspy = "^1.3.1"
+rich = "^13.8.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
