feat: add file that holds parsed science headers

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             //"args": ["check-gap","-f", "-m", "BurstE128", "sample-data/burst_data20230112-11h23.csv"]
-            "args":["split-packets", "--limit", "10" ,"--summarise", "--apid", "0x3e9", "tests/data/1001/*.bin"]
+            "args":["split-packets", "--limit", "10" ,"--summarise", "--apid", "0x42c", "--apid", "0x41c", "tests/data/*.bin"]
         }
     ]
 }
