--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,8 @@ jobs:
   build:
     strategy:
       matrix:
-        #python-versions: ['3.7', '3.8', '3.9', '3.10']
-        python-versions: ['3.9', '3.10', '3.11', '3.12']
-        os: [ubuntu-20.04]
+        python-versions: ['3.10', '3.11', '3.12']
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     # map step outputs to job outputs so they can be share among jobs
     outputs:
