--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,15 +1,23 @@
+FROM mcr.microsoft.com/devcontainers/python:3.13-bullseye
 
-# This was based off the default devcontainer for python and customised to support multiple python versions
-# see https://github.com/devcontainers/images/blob/main/src/python/.devcontainer/Dockerfile
+# install uv from the UV image
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
-## we start with the version we want as the system version
-FROM mcr.microsoft.com/devcontainers/python:3.11
-
-# And then use pyenv to install all the other versions as the vscode user
-ARG PYTHON_VERSIONS="3.10 3.11 3.12"
+ARG PYTHON_VERSIONS="3.10 3.11 3.12 3.13 3.14"
 USER vscode
-ENV PYENV_ROOT="/home/vscode/.pyenv"
-ENV PATH="$PYENV_ROOT/bin:$PATH"
-RUN curl https://pyenv.run | bash
-RUN $PYENV_ROOT/bin/pyenv install -v ${PYTHON_VERSIONS}
+
+# Install multiple Python versions using `uv` as the non-root user
+RUN uv python install $PYTHON_VERSIONS --install-dir /home/vscode/.local/bin
+
+RUN sudo apt-get update
+RUN python3 -m pip install --user pipx && \
+    python3 -m pipx ensurepath
+RUN pipx ensurepath && \
+    pipx install poetry
+
+ENV PATH="/home/vscode/.local/bin:${PATH}"
+
+RUN python3 -m pip install --user -U pre-commit
+
+
 
