--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mag"
-version = "1.9.1"
+version = "2.0.0"
 description = "Data tools for MAG GSE data processing"
 authors = ["Imperial College"]
 readme = "README.md"
@@ -9,19 +9,20 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.10"
-typer = "^0.9.0"
+python = ">=3.11,<4.0"
+typer = "~0.19"
 isort = "^5.11.4"
-setuptools = "^70.0.0"
+setuptools = "^80.9.0"
 importlib-resources = "^6.4.0"
 ccsdspy = "^1.3.1"
 rich = "^13.8.0"
+numpy = "^2.3.3"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.2.1"
-pytest-cov = "^4.0.0"
+pytest-cov = "~7"
 black = "^24.3.0"
 flake8 = "^6.0.0"
+pytest = "~8"
 
 [tool.poetry.scripts]
 # can execute via poetry, e.g. `poetry run mag hello world`
